# salesai

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  project_structure.md  pyproject.toml  requirements-dev.txt  requirements.txt
migrations/: env.py
scripts/: setup.py
src/: __init__.py
src/bot/: __init__.py  config.py  main.py
src/bot/handlers/: commands.py  messages.py
src/bot/middleware/: __init__.py  auth.py
src/bot/models/: __init__.py  base.py  user.py
src/bot/services/: __init__.py  user_service.py
src/bot/utils/: helpers.py  logging.py
tests/: __init__.py  conftest.py
tests/test_handlers/: __init__.py  test_commands.py
